[project]
name = "audioset-convnext-inf"
authors = [
    {name = "Thomas Pellegrini (topel)", email = "thomas.pellegrini@irit.fr"},
    {name = "Etienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
description = "Adapting a ConvNeXt model to audio classification on AudioSet"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["audio", "deep-learning", "pytorch", "audio", "audio-tagging", "audio-classification"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
maintainers = [
    {name = "Thomas Pellegrini (topel)", email = "thomas.pellegrini@irit.fr"},
]
version = "0.1.0"

dependencies = [
    "tqdm==4.64.1",
    "numpy==1.20.1",
    "torch==1.11.0",
    "torchaudio==0.11.0",
    "scikit-learn==0.24.2",
    "torchlibrosa==0.0.9",
    "scipy==1.6.3",
    "h5py==3.2.1",
    "matplotlib==3.4.2",
]

[project.urls]
Repository = "https://github.com/topel/audioset-convnext-inf"
Paper = "https://arxiv.org/pdf/2306.00830.pdf"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["audioset_convnext_inf*"]  # package names should match these glob patterns (["*"] by default)

[project.optional-dependencies]
dev = [
    "black==23.3.0",
]
